--- a/renovate.json
+++ b/renovate.json
@@ -1,17 +1,14 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "helmfile": {
-    "registryAliases": {
-      "bitnami": "https://charts.bitnami.com/bitnami",
-      "ingress-nginx": "https://kubernetes.github.io/ingress-nginx",
-      "grafana": "https://grafana.github.io/helm-charts",
-      "jellyfin": "https://jellyfin.github.io/jellyfin-helm",
-      "longhorn": "https://charts.longhorn.io",
-      "metallb": "https://metallb.github.io/metallb",
-      "mojo2600": "https://mojo2600.github.io/pihole-kubernetes",
-      "nextcloud": "https://nextcloud.github.io/helm",
-      "prometheus-community": "https://prometheus-community.github.io/helm-charts",
-      "vaultwarden": "https://guerzon.github.io/vaultwarden",
-    },
-  },
-}
+  "packageRules": [
+    {
+      "matchDatasources": [
+        "helm" 
+      ],
+      "matchPackageNames": [
+        "kube-prometheus-stack"
+      ]
+    }
+  ]
+ }
